samples/_failures_safe/1761659487_1ee6d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e6f3231.c: In function ‘main’:
./samples/SAFE/__tmp_5e6f3231.c:166:17: error: expected ‘;’ at end of input
  166 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_5e6f3231.c:166:9: error: expected declaration or statement at end of input
  166 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_5e6f3231.c:166:9: error: expected declaration or statement at end of input
